- Remove OnLaunch "Hide" mode
- Reorganize configuration file into smaller sections
- Make VSync optional
- Add support for transparent backgrounds
- Allow control from multiple gamepads
- Allow unlimited number of slideshow backgrounds
- Make highlight optional
- Make application titles optional
- Specify color and key HEX codes with string beginning with # character
- Create dialog box on fatal errors
- Linux: Prefer native Wayland over XWayland

v1.8 (2022-10-7)
- Added inhibit OS screensaver feature
- Minor bugfixes
- Windows: Added "chrome_proxy.exe" to the list of supported browser processes

v1.7 (2022-5-30)
- Added selected icons feature
- Added StartupCmd and QuitCmd features
- New getopt-based command line parsing

v1.6.1 (2022-4-19)
- Windows: Disable system DPI scaling

v1.6 (2022-4-2)
- Added background overlay feature
- Added text shadows feature
- Added outline configuration option for highlight
- Added scroll indicator outline configuration option
- Fixed bug where an unmapped controller won't automatically connect upon startup

v1.5 (2022-2-28)
- Added :fork special command
- Enabled VSync
- Added MouseSelect setting for gyroscopic mouse support
- Windows: Added exit hotkey feature
- Windows: The :sleep special command now properly sleeps the PC instead of hibernating it

v1.4 (2022-2-5)
- Added clock widget to show the current time and date
- Windows: Full Unicode support implemented
- Linux: Changed .desktop file action delimiting character from pipe | to semicolon ;

v1.3 (2022-1-13)
- Added hotkeys feature
- Removed EscQuit setting. Esc to quit functionality is now implemented as a configurable hotkey
- Changed slideshow time units from milliseconds to seconds
- Windows: Applications now launch via WIN32 API instead of the standard C runtime
- Windows: Implemented OnLaunch setting that was previously Linux exclusive
- Windows: Fixed web browser non-blocking issue
- Linux: Improved Wayland support

v1.2 (2022-1-2)