@@ -27,7 +27,7 @@
 @SETTING_MAX_BUTTONS@=@DEFAULT_MAX_BUTTONS@
 @SETTING_ICON_SIZE@=@DEFAULT_ICON_SIZE@
 @SETTING_ICON_SPACING@=@DEFAULT_ICON_SPACING@
-@SETTING_BUTTON_CENTERLINE@=@DEFAULT_BUTTON_CENTERLINE@
+@SETTING_VCENTER@=@DEFAULT_VCENTER@
 
 [Titles]
 @SETTING_TITLES_ENABLED@=@DEFAULT_TITLES_ENABLED@
