@@ -33,7 +33,7 @@ set(SETTING_HIGHLIGHT_OUTLINE_OPACITY "OutlineOpacity")
 set(SETTING_HIGHLIGHT_CORNER_RADIUS "CornerRadius")
 set(SETTING_HIGHLIGHT_VPADDING "VPadding")
 set(SETTING_HIGHLIGHT_HPADDING "HPadding")
-set(SETTING_BUTTON_CENTERLINE "ButtonCenterline")
+set(SETTING_VCENTER "VCenter")
 set(SETTING_SCROLL_INDICATORS "Enabled")
 set(SETTING_SCROLL_INDICATOR_FILL_COLOR "FillColor")
 set(SETTING_SCROLL_INDICATOR_OUTLINE_SIZE "OutlineSize")
@@ -145,7 +145,7 @@ set(DEFAULT_HIGHLIGHT_OUTLINE_OPACITY "100%")
 set(DEFAULT_HIGHLIGHT_CORNER_RADIUS 0)
 set(DEFAULT_HIGHLIGHT_VPADDING 30)
 set(DEFAULT_HIGHLIGHT_HPADDING 30)
-set(DEFAULT_BUTTON_CENTERLINE "50%")
+set(DEFAULT_VCENTER "50%")
 set(DEFAULT_SCROLL_INDICATORS "true")
 set(DEFAULT_SCROLL_INDICATOR_FILL_COLOR_R "FF")
 set(DEFAULT_SCROLL_INDICATOR_FILL_COLOR_G "FF")
