@@ -66,7 +66,7 @@
 #define SETTING_HIGHLIGHT_VPADDING "@SETTING_HIGHLIGHT_VPADDING@"
 #define SETTING_HIGHLIGHT_HPADDING "@SETTING_HIGHLIGHT_HPADDING@"
 #define SETTING_HIGHLIGHT_CORNER_RADIUS "@SETTING_HIGHLIGHT_CORNER_RADIUS@"
-#define SETTING_BUTTON_CENTERLINE "@SETTING_BUTTON_CENTERLINE@"
+#define SETTING_VCENTER "@SETTING_VCENTER@"
 #define SETTING_SCROLL_INDICATORS "@SETTING_SCROLL_INDICATORS@"
 #define SETTING_SCROLL_INDICATOR_FILL_COLOR "@SETTING_SCROLL_INDICATOR_FILL_COLOR@"
 #define SETTING_SCROLL_INDICATOR_OUTLINE_SIZE "@SETTING_SCROLL_INDICATOR_OUTLINE_SIZE@"
@@ -178,7 +178,7 @@
 #define DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_G 0x@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_G@
 #define DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_B 0x@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_B@
 #define DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_A 0x@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_A@
-#define DEFAULT_BUTTON_CENTERLINE "@DEFAULT_BUTTON_CENTERLINE@"
+#define DEFAULT_VCENTER "@DEFAULT_VCENTER@"
 #define DEFAULT_RESET_ON_BACK @DEFAULT_RESET_ON_BACK@
 #define DEFAULT_MOUSE_SELECT @DEFAULT_MOUSE_SELECT@
 #define DEFAULT_INHIBIT_OS_SCREENSAVER @DEFAULT_INHIBIT_OS_SCREENSAVER@
