@@ -70,7 +70,7 @@ Config config = {
     .title_opacity[0]                 = '\0',
     .highlight_fill_opacity[0]        = '\0',
     .highlight_outline_opacity[0]     = '\0',
-    .button_centerline[0]             = '\0',
+    .vcenter[0]             = '\0',
     .icon_spacing_str[0]              = '\0',
     .scroll_indicators                = DEFAULT_SCROLL_INDICATORS,
     .scroll_indicator_fill_color.r    = DEFAULT_SCROLL_INDICATOR_FILL_COLOR_R,
